# didi

./: .gitignore  README.md  api.html
AppScope/: app.json5
langgraph_minimal/: .env.example  .gitignore  README.md  langgraph.json  requirements-multimodal.txt  requirements.txt
langgraph_minimal/app/: chapter10_a2a_agent.py  chapter10_customer_service_a2a.py  cli.py  codebase_maintenance_assistant.py  coding_prompts.py  config.py  context.py  context_engineering.py  graph.py  mcp_server.py  memory.py  my_context_aware_agent.py  my_memory_agent.py  my_multimodal_memory_agent.py  note_tool.py  planning_graph.py  rag.py  rag_graph.py  router_graph.py  runner.py  server.py  terminal_tool.py  tools.py  weather_mcp_server.py
langgraph_minimal/docs/: chapter8_memory_system.md  weather_mcp_server.md
langgraph_minimal/scripts/: chapter10_a2a_agent_demo.py  chapter10_customer_service_a2a_demo.py  chapter10_customer_service_a2a_real_llm_demo.py  chapter10_external_filesystem_mcp_demo.py  chapter10_mcp_server_demo.py  chapter10_weather_mcp_demo.py  chapter8_backend_health.py  chapter8_business_multimodal_demo.py  chapter8_document_learning_demo.py  chapter8_memory_rag_dashboard_demo.py  chapter8_memory_rag_dashboard_http_demo.py  chapter8_multimodal_pipeline_demo.py  chapter8_multimodal_worker.py  chapter8_my_rag_qa_demo.py  chapter8_neo4j_graph_smoke.py  chapter8_real_file_matrix.py  chapter9_codebase_maintenance_demo.py  chapter9_context_aware_agent_demo.py  (+5 more)
langgraph_minimal/weather-mcp-server/: Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
(+76 files in other folders)
